# RandomIrishWord

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  main.py  pyproject.toml  remote_feed.py  setup.cfg  words.py
.github/workflows/: build-and-publish.yml  python-app.yml
src/teanglann/: __init__.py  __main__.py  words.py
