[project]
name = "teanglann"
version = "0.0.2"
description = "Random Irish words from teanglann.ie"
readme = "README.md"
authors = [
  { name = "My Name", email = "sopermaf@tcd.ie" },
]
maintainers = [
  { name = "My Organization", email = "myemail@email.com" },
]
requires-python = ">=3.11"

dependencies = [
  "bs4",
  "requests",
  "click",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "mypy",
  "types-requests",
  "types-beautifulsoup4",
  "pytest",
  "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/sopermaf/RandomIrishWord"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/teanglann"]

[project.scripts]
teanglann = "teanglann.__main__:cli"
